fixed wording on EventBite page

--- a/eventbite.html
+++ b/eventbite.html
@@ -71,14 +71,14 @@
 						concerts, festivals, sports, and more. Features including loading all available
 						events from their current location using their IP address, directly linking to
 						SeatGeek when requesting tickets for events, and displaying information of
-						restaurants nearby the eventsite. Collaborated with <a href="https://github.com/i-k0n" target="_blank">
+						restaurants nearby the eventsite. Collaborated with the back-end team, <a href="https://github.com/i-k0n" target="_blank">
 						Mark Baker</a>, <a href="https://github.com/dwilliams5807" target="_blank">Daniel Williams</a>,
 						and <a href="https://github.com/seabee03" target="_blank">DJ Prado</a>.</p>
-					<h4><b>The Problem</b></h4>
+					<h4><b>Problem</b></h4>
 					<p>When it comes to scheduling an eventful day with family or friends, it is time consuming and difficult to
 						focus when constantly having to switch between two or more applications just to get information on
-						an event and deciding on where to eat beforehand or afterwards.</p>
-						<p>It would be much more convienent to have an application that does the following:</p>
+						an event and deciding on where to eat beforehand or afterwards.
+						It would be much more convienent to have an application that does the following:</p>
 						<ul>
 							<li>Show current events in my area and search for other events by city, category, and name.</li>
 							<li>Display general information on events and nearby restaurants, including date, time, and location.</li>
@@ -93,7 +93,7 @@
 						<li>Created the user interface using HTML, CSS, and jQuery, incorporating and styling Bootstrap components, and adding
 							responsive elements to display the content correctly across multiple devices and browsers.</li>
 						<li>Integrated event map via MapBox using the longitude and latitude coordinates passed from the SeatGeek API.</li>
-						<li>Work with team to add features that enhances the user experience, including displaying user location in the search bar
+						<li>Work with the team to add features that enhances the user experience, including displaying user location in the search bar
 							upon load once retrieved from the <a href="https://www.geojs.io/" target="_blank">GeoJS API</a>, implementing a
 							scroll towards the events section when a search has been submitted or a featured location has been
 							selected, and updating the section title according to the city the events take place.</li>
