hid some projects and rewrote jquery

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 								</a>
 							</div>
 						</div>
-						<div class="col-sm-6 code">
+						<!-- <div class="col-sm-6 code">
 							<div class="project project-item">
 								<img src="images/getgiphy.png" class="category__image" />
 								<a href="getgiphy.html">
@@ -105,8 +105,8 @@
 									</figcaption>
 								</a>
 							</div>
-						</div>
-						<div class="col-sm-6 code">
+						</div> -->
+						<!-- <div class="col-sm-6 code">
 							<div class="project project-item">
 								<img src="images/trivia-game.png" class="category__image" />
 								<a href="trivia-game.html">
@@ -116,8 +116,8 @@
 									</figcaption>
 								</a>
 							</div>
-						</div>
-						<div class="col-sm-6 code">
+						</div> -->
+						<!-- <div class="col-sm-6 code">
 							<div class="project project-item">
 								<img src="images/rpg-game.png" class="category__image" />
 								<a href="rpg-game.html">
@@ -127,8 +127,8 @@
 									</figcaption>
 								</a>
 							</div>
-						</div>
-						<div class="col-sm-6 code">
+						</div> -->
+						<!-- <div class="col-sm-6 code">
 							<div class="project project-item">
 								<img src="images/word-guess-game.png" class="category__image" />
 								<a href="word-guess-game.html">
@@ -138,8 +138,8 @@
 									</figcaption>
 								</a>
 							</div>
-						</div>
-						<div class="col-sm-6 code">
+						</div> -->
+						<!-- <div class="col-sm-6 code">
 							<div class="project project-item">
 								<img src="images/pomodoro-timer.png" class="category__image" />
 								<a href="pomodoro-timer.html">
@@ -160,7 +160,7 @@
 									</figcaption>
 								</a>
 							</div>
-						</div>
+						</div> -->
 						<div class="col-sm-6 code">
 							<div class="project project-item">
 								<img src="images/wikipedia-viewer2.png" class="category__image" />
@@ -172,7 +172,7 @@
 								</a>
 							</div>
 						</div>
-						<div class="col-sm-6 code">
+						<!-- <div class="col-sm-6 code">
 							<div class="project project-item">
 								<img src="images/quicksand-photography.png" class="category__image" />
 								<a href="quicksand-photography.html">
@@ -182,7 +182,7 @@
 									</figcaption>
 								</a>
 							</div>
-						</div>
+						</div> -->
 						<div class="col-sm-6 design">
 							<div class="project project-item category__image">
 								<img src="images/daily-ui-day-one2.png" class="category__image"  />
