added target blank to links and updated wikipedia viewer's image

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 		<div class="inner-container" id="top">
 			<div class="splash">
 				<h5>Elain Tran - Visual Designer & Web Developer</h5>
-				<h1>Hello! I’m a self-taught visual designer and front end developer
-				based in Austin, Texas.</h1>
+				<h1>Hello! I’m a self-taught visual designer and flourishing front-end developer
+				based in Texas.</h1>
 				<div class="down">
 					<a href="#portfolio"><i class="fa fa-angle-down"></i></a>
 				</div>
@@ -163,7 +163,7 @@
 						</div> -->
 						<div class="col-sm-6 code">
 							<div class="project project-item">
-								<img src="images/wikipedia-viewer2.png" class="category__image" />
+								<img src="images/wikipedia-viewer3.png" class="category__image" />
 								<a href="wikipedia-viewer.html">
 									<figcaption>
 										<h3>Wikipedia Viewer</h3>
@@ -206,10 +206,10 @@
 		<div class="section-container">
 			<div class="social-media-bar">
 				<a href="mailto:elain.ttran@gmail.com"><i class="fa fa-envelope"></i></a> 
-				<a href="https://facebook.com/elainttran"><i class="fa fa-facebook"></i></a>  
-				<a href="https://instagram.com/journeywithelain"><i class="fa fa-instagram"></i></a>
-				<a href="https://github.com/elaintran"><i class="fa fa-github"></i></a>
-				<a href="https://www.linkedin.com/in/elaintran"><i class="fa fa-linkedin"></i></a>
+				<a href="https://facebook.com/elainttran" target="_blank"><i class="fa fa-facebook"></i></a>  
+				<a href="https://instagram.com/journeywithelain" target="_blank"><i class="fa fa-instagram"></i></a>
+				<a href="https://github.com/elaintran" target="_blank"><i class="fa fa-github"></i></a>
+				<a href="https://www.linkedin.com/in/elaintran" target="_blank"><i class="fa fa-linkedin"></i></a>
 			</div>
 		</div>
 	<footer>
