--- a/wikipedia-viewer.html
+++ b/wikipedia-viewer.html
@@ -51,7 +51,7 @@
 	<!--Wikipedia Viewer-->
 	<div class="section-container">
 		<section id="portfolio" class="container project-section">
-			<img src="images/wikipedia-viewer2.png" class="category__image">
+			<img src="images/wikipedia-viewer3.png" class="category__image">
 			<div class="project-tag">
 				<div class="tag-list">
 					<div class="index-tag active"><h6>#HTML</h6></div>
@@ -91,10 +91,10 @@
 		<div class="section-container">
 			<div class="social-media-bar">
 				<a href="mailto:elain.ttran@gmail.com"><i class="fa fa-envelope"></i></a> 
-				<a href="https://facebook.com/elainttran"><i class="fa fa-facebook"></i></a>  
-				<a href="https://instagram.com/journeywithelain"><i class="fa fa-instagram"></i></a>
-				<a href="https://github.com/elaintran"><i class="fa fa-github"></i></a>
-				<a href="https://www.linkedin.com/in/elaintran"><i class="fa fa-linkedin"></i></a>
+				<a href="https://facebook.com/elainttran" target="_blank"><i class="fa fa-facebook"></i></a>  
+				<a href="https://instagram.com/journeywithelain" target="_blank"><i class="fa fa-instagram"></i></a>
+				<a href="https://github.com/elaintran" target="_blank"><i class="fa fa-github"></i></a>
+				<a href="https://www.linkedin.com/in/elaintran" target="_blank"><i class="fa fa-linkedin"></i></a>
 			</div>
 		</div>
 	</footer>
