moved projects from html to js to loop through

--- a/train-scheduler.html
+++ b/train-scheduler.html
@@ -67,17 +67,17 @@
 				<div class="description">
 					<h3><b>Train Scheduler</b></h3>
 					<p>The Train Scheduler is a schedule application that utilizes Firebase and Moment.js to store train data and reflect updates real-time.
-						Users are able to submit train information, such as destination, arrival time, and minutes remaining. Along with that, they can go back and
+						Users are able to submit train information, including as destination, arrival time, and minutes remaining. Along with that, they can go back and
 						edit or delete their previously submitted trains from the table.</p>
 					<h4><b>User Stories</b></h4>
 					<p>One of UT Austin Coding Bootcamp’s database projects is to create a train scheduler with the following user stories:</p>
 					<ul>
-						<li>I am able to submit information about my train.</li>
-						<li>I can see when my train will arrive, relative to the current time.</li>
-						<li>I am able to update or remove each train.</li>
+						<li>I am able to submit information about my train and see when my train will arrive, relative to current time.</li>
+						<li>I am able to update or remove each train after submission.</li>
 					</ul>
 					<h4><b>Development Process</b></h4>
 					<p>Currently in progress. Check back later.</p>
+					<p>Potential updates in the future including confirmation when deleting a train.</p>
 				</div>
 			</div>
 			<div class="project-link">
