prevent jumping to location.hash immediately on load

--- a/about.html
+++ b/about.html
@@ -79,10 +79,10 @@
 		<div class="container">
 			<div class="social-media-bar">
 				<a href="mailto:elain.ttran@gmail.com"><i class="fa fa-envelope"></i></a> 
-				<a href="https://facebook.com/elainttran"><i class="fa fa-facebook"></i></a>  
-				<a href="https://instagram.com/journeywithelain"><i class="fa fa-instagram"></i></a>
-				<a href="https://github.com/elaintran"><i class="fa fa-github"></i></a>
-				<a href="https://www.linkedin.com/in/elaintran"><i class="fa fa-linkedin"></i></a>
+				<a href="https://facebook.com/elainttran" target="_blank"><i class="fa fa-facebook"></i></a>  
+				<a href="https://instagram.com/journeywithelain" target="_blank"><i class="fa fa-instagram"></i></a>
+				<a href="https://github.com/elaintran" target="_blank"><i class="fa fa-github"></i></a>
+				<a href="https://www.linkedin.com/in/elaintran" target="_blank"><i class="fa fa-linkedin"></i></a>
 			</div>
 		</div>
 	</footer>
