--- a/eventbite.html
+++ b/eventbite.html
@@ -68,7 +68,7 @@
 					<h3><b>EventBite</b></h3>
                     <p>EventBite is a mobile responsive event search application that lets you
                         discover the upcoming entertainment happening in your local area- from
-						concerts, festivals, sports, and more. Features including loading all available
+						concerts, festivals, sports, and more. Features include loading all available
 						events from their current location using their IP address, directly linking to
 						SeatGeek when requesting tickets for events, and displaying information of
 						restaurants nearby the eventsite. Collaborated with the API team, <a href="https://github.com/i-k0n" target="_blank">
