--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			<div class="splash">
 				<h5>Elain Tran - Visual Designer & Web Developer</h5>
 				<h1>Hello! I’m a self-taught visual designer and flourishing front-end developer
-				based in Texas.</h1>
+				based in the Austin area.</h1>
 				<div class="down">
 					<a href="#portfolio"><i class="fa fa-angle-down"></i></a>
 				</div>
