updated burger case study

--- a/eventbite.html
+++ b/eventbite.html
@@ -71,7 +71,7 @@
 						concerts, festivals, sports, and more. Features include loading all available
 						events from their current location using their IP address, directly linking to
 						SeatGeek when requesting tickets for events, and displaying information of
-						restaurants nearby the eventsite. Collaborated with the API team, <a href="https://github.com/i-k0n" target="_blank">
+						restaurants nearby the eventsite. Collaborated with <a href="https://github.com/i-k0n" target="_blank">
 						Mark Baker</a>, <a href="https://github.com/dwilliams5807" target="_blank">Daniel Williams</a>,
 						and <a href="https://github.com/seabee03" target="_blank">DJ Prado</a>.</p>
 					<h4><b>Problem</b></h4>
