added delish scraper and added more tags to other projects

--- a/heroes-united.html
+++ b/heroes-united.html
@@ -73,23 +73,31 @@
                     <p>Heroes United is a multi-level, turn-based browser game revolving around you, the player, as you rise up to
                         defend your homeland from invaders, join the local militia, and fight alongside one another towards justice.
                         Features include user authentication and session storage via Passport.js and MySQL, character selection from a wide variety of
-                        classes, and an engaging combat system. Collaborated with <a href="https://github.com/bmm019" target="_blank">
-						Brittany McNulty</a>, <a href="https://github.com/christinaqtruong" target="_blank">Christina Truong</a>,
-                        <a href="https://github.com/dgarza0413" target="_blank">David Garza</a>, and <a href="https://github.com/i-k0n" target="_blank">
-                        Mark Baker</a>.</p>
+						classes, an engaging combat system, and special appearances from <a href="https://nintendo.com/" target="_blank">Nintendo</a>'s hit mobile game,
+						<a href="https://fire-emblem-heroes.com" target="_blank">Fire Emblem Heroes</a>. Collaborated with
+						<a href="https://github.com/bmm019" target="_blank">Brittany McNulty</a>, <a href="https://github.com/christinaqtruong" target="_blank">
+						Christina Truong</a>, <a href="https://github.com/dgarza0413" target="_blank">David Garza</a>, and
+						<a href="https://github.com/i-k0n" target="_blank">Mark Baker</a>.</p>
 					<h4><b>Problem</b></h4>
 					<p>The issue with some games is when players progress through the story and are restricted to one only character
                         throughout their entire playthrough, their experience is very linear and isolated compared to having a playable cast. It would
                         be more appealing to have a game that does the following:</p>
 						<ul>
-                            <li>Permit users to sign up or log in and save their current session, including their character selection and chapter progresion.</li>
-							<li>Allow users to choose from a multitude of characters and change their class throughout the game.</li>
-							<li>Engage the user in making tactical decisions when in combat.</li>
+                            <li>Permit users to sign up or log in and save their current session, including their character selection and chapter progression.</li>
+							<li>Allow users to choose from a multitude of characters and change their class anytime, with no restrictions.</li>
+							<li>Prompt the user in performing tactical decisions when engaging in combat.</li>
 						</ul>
-					<!-- <h4><b>My Role</b></h4>
+					<h4><b>My Role</b></h4>
 					<ul>
-                        <li>Spearheaded the art direction and kept design consistent among all of the webpages.</li>
-					</ul> -->
+						<li>Spearheaded the art direction and kept design consistent among all of the webpages.</li>
+						<!-- <li>Appended data on the character select and world page by using a GET method and pulling the information
+							the information from the MySQL database.</li> -->
+						<li>Developed a stat distribution function that incorportated <a href="https://d3js.org/" target="_blank">D3.js</a>
+							to display a bar graph visual of each character's base stats and the newly added stats.</li>
+						<li>Designed a chapter unlock system that allows users to see the current chapter status depending on their story progression
+							indicated from the MySQL database.</li>
+						<li>Worked with the main back-end developer on the flow of the application pertaining to new users versus existing users.</li>
+					</ul>
 				</div>
 			</div>
 			<div class="project-link">
