updated links on delish scraper

--- a/delish-scraper.html
+++ b/delish-scraper.html
@@ -98,8 +98,8 @@
 				</div>
 			</div>
 			<div class="project-link">
-				<a href="https://burger-ett.herokuapp.com/" target="_blank"><button class="click"><i class=""></i> View Live Demo</button></a>
-				<a href="https://github.com/elaintran/burger" target="_blank"><button class="click"><i class="fa fa-github"></i> View on Github</button></a>
+				<a href="https://delishscraper-ett.herokuapp.com/" target="_blank"><button class="click"><i class=""></i> View Live Demo</button></a>
+				<a href="https://github.com/elaintran/mongo-scraper" target="_blank"><button class="click"><i class="fa fa-github"></i> View on Github</button></a>
 			</div>
 		</section>
 	</div>
