finished writing role info for heroes united

--- a/booktracker.html
+++ b/booktracker.html
@@ -54,7 +54,7 @@
 			<img src="images/booktracker.png" class="category__image">
 			<div class="project-tag">
 				<div class="tag-list">
-					<div class="index-tag active"><h6>#React.js</h6></div>
+					<div class="index-tag active"><h6>#ReactJS</h6></div>
                     <div class="index-tag active"><h6>#Node.js</h6></div>
 					<div class="index-tag active"><h6>#Express.js</h6></div>
 					<div class="index-tag active"><h6>#MongoDB</h6></div>
