--- a/heroes-united.html
+++ b/heroes-united.html
@@ -90,13 +90,12 @@
 					<h4><b>My Role</b></h4>
 					<ul>
 						<li>Spearheaded the art direction and kept design consistent among all of the webpages.</li>
-						<!-- <li>Appended data on the character select and world page by using a GET method and pulling the information
-							the information from the MySQL database.</li> -->
 						<li>Developed a stat distribution function that incorportated <a href="https://d3js.org/" target="_blank">D3.js</a>
 							to display a bar graph visual of each character's base stats and the newly added stats.</li>
-						<li>Designed a chapter unlock system that allows users to see the current chapter status depending on their story progression
+						<li>Designed a chapter unlock system that allows users to see the current, previous, and upcoming chapter status depending on their story progression
 							indicated from the MySQL database.</li>
-						<li>Worked with the main back-end developer on the flow of the application pertaining to new users versus existing users.</li>
+						<li>Worked with the main back-end developer on the user flow pertaining to Express routing concerning new users versus existing users and 
+							integrating data onto select pages.</li>
 					</ul>
 				</div>
 			</div>
