--- a/eventbite.html
+++ b/eventbite.html
@@ -101,8 +101,8 @@
 				</div>
 			</div>
 			<div class="project-link">
-				<a href="https://event-bite.herokuapp.com/" target="_blank"><button class="click"><i class=""></i> View Live Demo</button></a>
-				<a href="https://github.com/dwilliams5807/Group4_project1" target="_blank"><button class="click"><i class="fa fa-github"></i> View on Github</button></a>
+				<a href="https://event-bite.herokuapp.com/" target="_blank"><button class="click">View Live Demo</button></a>
+				<a href="https://github.com/dwilliams5807/Group4_project1" target="_blank"><button class="click">View on Github</button></a>
 			</div>
 		</section>
 	</div>
