fixed typos and updated delish scrape development process

--- a/heroes-united.html
+++ b/heroes-united.html
@@ -71,7 +71,7 @@
 				<div class="description">
 					<h3><b>Heroes United</b></h3>
                     <p>Heroes United is a multi-level, turn-based browser game revolving around you, the player, as you rise up to
-                        defend your homeland from invaders, join the local militia, and fight alongside one another towards justice.
+                        defend your homeland from invaders, join the local militia, and fight towards justice.
                         Features include user authentication and session storage via Passport.js and MySQL, character selection from a wide variety of
 						classes, an engaging combat system, and special appearances from <a href="https://nintendo.com/" target="_blank">Nintendo</a>'s hit mobile game,
 						<a href="https://fire-emblem-heroes.com" target="_blank">Fire Emblem Heroes</a>. Collaborated with
@@ -100,8 +100,8 @@
 				</div>
 			</div>
 			<div class="project-link">
-				<a href="https://heroesunited.herokuapp.com/" target="_blank"><button class="click"><i class=""></i> View Live Demo</button></a>
-				<a href="https://github.com/elaintran/heroes-united" target="_blank"><button class="click"><i class="fa fa-github"></i> View on Github</button></a>
+				<a href="https://heroesunited.herokuapp.com/" target="_blank"><button class="click">View Live Demo</button></a>
+				<a href="https://github.com/elaintran/heroes-united" target="_blank"><button class="click">View on Github</button></a>
 			</div>
 		</section>
 	</div>
