removed github logo on button

--- a/booktracker.html
+++ b/booktracker.html
@@ -94,8 +94,8 @@
 				</div>
 			</div>
 			<div class="project-link">
-				<a href="https://booktracker-ett.herokuapp.com/" target="_blank"><button class="click"><i class=""></i> View Live Demo</button></a>
-				<a href="https://github.com/elaintran/BookTracker" target="_blank"><button class="click"><i class="fa fa-github"></i> View on Github</button></a>
+				<a href="https://booktracker-ett.herokuapp.com/" target="_blank"><button class="click">View Live Demo</button></a>
+				<a href="https://github.com/elaintran/BookTracker" target="_blank"><button class="click">View on Github</button></a>
 			</div>
 		</section>
 	</div>
