adjust navigation mobile view

--- a/booktracker.html
+++ b/booktracker.html
@@ -34,15 +34,15 @@
 <body>
 	<!-- Navigation -->
 	<nav class="navbar fixed-top navbar-expand-md navbar-light" style="background-color: white;">
-		<a class="navbar-brand" href="index.html">elain.</a>
+		<a class="navbar-brand" href="#top">elain.</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
+			<i class="fa fa-bars"></i>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 			<div class="navbar-nav ml-auto">
-				<a href="about.html" class="nav-link menu"><div class="underline">About</div></a>
-				<a href="index.html#portfolio" class="nav-link menu"><div class="underline">Work</div></a>
-				<a href="elain-tran-resume.pdf" class="nav-link menu" target="_blank"><div class="underline">Resume</div></a>
+				<div class="underline"><a href="about.html" class="nav-link menu">About</a></div>
+				<div class="underline"><a href="index.html#portfolio" class="nav-link menu">Work</a></div>
+				<div class="underline"><a href="elain-tran-resume.pdf" class="nav-link menu" target="_blank">Resume</a></div>
 			</div>
 		</div>
 	</nav>
