separated toggle function into another js file

--- a/burger.html
+++ b/burger.html
@@ -117,5 +117,8 @@
 	</footer>
 	<!--End Social Icons-->
 
+	<!--Javascript-->
+	<script type="text/javascript" src="js/navbar.js"></script>
+
 </body>
 </html>
