--- a/heroes-united.html
+++ b/heroes-united.html
@@ -121,5 +121,8 @@
 	</footer>
 	<!--End Social Icons-->
 
+	<!--Javascript-->
+	<script type="text/javascript" src="js/navbar.js"></script>
+
 </body>
 </html>
