--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 
 	<!--Javascript-->
 	<script type="text/javascript" src="js/script.js"></script>
+	<script type="text/javascript" src="js/navbar.js"></script>
 
 </body>
 </html>
