--- a/delish-scraper.html
+++ b/delish-scraper.html
@@ -126,5 +126,8 @@
 	</footer>
 	<!--End Social Icons-->
 
+	<!--Javascript-->
+	<script type="text/javascript" src="js/navbar.js"></script>
+
 </body>
 </html>
