--- a/index.html
+++ b/index.html
@@ -74,6 +74,83 @@
 			<div class="gallery">
 				<div class="container-fluid">
 					<div class="row">
+						<div class="col-sm-6 code">
+							<div class="project project-item">
+								<img src="images/booktracker.png" class="category__image">
+								<a href="booktracker.html">
+									<figcaption>
+										<h3>BookTracker</h3>
+										<h5>Full Stack Development</h5>
+									</figcaption>
+								</a>
+							</div>
+						</div>
+						<div class="col-sm-6 code">
+							<div class="project project-item">
+								<img src="images/delish-scraper.png" class="category__image">
+								<a href="delish-scraper.html">
+									<figcaption>
+										<h3>Delish Scraper</h3>
+										<h5>Full Stack Development</h5>
+									</figcaption>
+								</a>
+							</div>
+						</div>
+						<div class="col-sm-6 code">
+							<div class="project project-item">
+								<img src="images/heroes-united.png" class="category__image">
+								<a href="heroes-united.html">
+									<figcaption>
+										<h3>Heroes United</h3>
+										<h5>Full Stack Development</h5>
+									</figcaption>
+								</a>
+							</div>
+						</div>
+						<div class="col-sm-6 code">
+							<div class="project project-item">
+								<img src="images/burger2.png" class="category__image">
+								<a href="burger.html">
+									<figcaption>
+										<h3>Burger</h3>
+										<h5>Full Stack Development</h5>
+									</figcaption>
+								</a>
+							</div>
+						</div>
+						<div class="col-sm-6 code">
+							<div class="project project-item">
+								<img src="images/eventbite.png" class="category__image">
+								<a href="eventbite.html">
+									<figcaption>
+										<h3>EventBite</h3>
+										<h5>Front End Development</h5>
+									</figcaption>
+								</a>
+							</div>
+						</div>
+						<div class="col-sm-6 code">
+							<div class="project project-item">
+								<img src="images/train-scheduler.png" class="category__image">
+								<a href="train-scheduler.html">
+									<figcaption>
+										<h3>Train Scheduler</h3>
+										<h5>Front End Development</h5>
+									</figcaption>
+								</a>
+							</div>
+						</div>
+						<div class="col-sm-6 design">
+							<div class="project project-item">
+								<img src="images/daily-ui-day-one2.png" class="category__image">
+								<a href="daily-ui-challenge.html">
+									<figcaption>
+										<h3>Daily UI Challenge</h3>
+										<h5>Visual Design</h5>
+									</figcaption>
+								</a>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
