--- a/eventbite.html
+++ b/eventbite.html
@@ -34,7 +34,7 @@
 <body>
 	<!-- Navigation -->
 	<nav class="navbar fixed-top navbar-expand-md navbar-light" style="background-color: white;">
-		<a class="navbar-brand" href="#top">elain.</a>
+		<a class="navbar-brand" href="index.html">elain.</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 			<i class="fa fa-bars"></i>
 		</button>
