updated eventbite github link

--- a/eventbite.html
+++ b/eventbite.html
@@ -102,7 +102,7 @@
 			</div>
 			<div class="project-link">
 				<a href="https://event-bite.herokuapp.com/" target="_blank"><button class="click">View Live Demo</button></a>
-				<a href="https://github.com/dwilliams5807/Group4_project1" target="_blank"><button class="click">View on Github</button></a>
+				<a href="https://github.com/elaintran/EventBite" target="_blank"><button class="click">View on Github</button></a>
 			</div>
 		</section>
 	</div>
