added fuelup to portfolio

--- a/index.html
+++ b/index.html
@@ -75,6 +75,17 @@
 				<div class="container-fluid">
 					<div class="row">
 						<div class="col-sm-6 code">
+								<div class="project project-item">
+									<img src="images/fuelup.png" class="category__image">
+									<a href="fuelup.html">
+										<figcaption>
+											<h3>FuelUp</h3>
+											<h5>Full Stack Development</h5>
+										</figcaption>
+									</a>
+								</div>
+							</div>		
+						<div class="col-sm-6 code">
 							<div class="project project-item">
 								<img src="images/booktracker.png" class="category__image">
 								<a href="booktracker.html">
