--- a/booktracker.html
+++ b/booktracker.html
@@ -95,7 +95,7 @@
 				</div>
 			</div>
 			<div class="project-link">
-				<a href="https://booktracker-ett.herokuapp.com/" target="_blank"><button class="click">View Live Demo</button></a>
+				<a href="https://booktracker-q4cv.onrender.com/" target="_blank"><button class="click">View Live Demo</button></a>
 				<a href="https://github.com/elaintran/BookTracker" target="_blank"><button class="click">View on Github</button></a>
 			</div>
 		</section>
