--- a/burger.html
+++ b/burger.html
@@ -96,7 +96,7 @@
 				</div>
 			</div>
 			<div class="project-link">
-				<a href="https://burger-ett.herokuapp.com/" target="_blank"><button class="click">View Live Demo</button></a>
+				<a href="https://burger-590o.onrender.com/" target="_blank"><button class="click">View Live Demo</button></a>
 				<a href="https://github.com/elaintran/burger" target="_blank"><button class="click">View on Github</button></a>
 			</div>
 		</section>
