--- a/delish-scraper.html
+++ b/delish-scraper.html
@@ -105,7 +105,7 @@
 				</div>
 			</div>
 			<div class="project-link">
-				<a href="https://delishscraper-ett.herokuapp.com/" target="_blank"><button class="click">View Live Demo</button></a>
+				<a href="https://delish.onrender.com" target="_blank"><button class="click">View Live Demo</button></a>
 				<a href="https://github.com/elaintran/mongo-scraper" target="_blank"><button class="click">View on Github</button></a>
 			</div>
 		</section>
