--- a/fuelup.html
+++ b/fuelup.html
@@ -129,7 +129,7 @@
 				</div>
 			</div>
 			<div class="project-link">
-				<a href="https://fuelup.herokuapp.com/" target="_blank"><button class="click">View Live Demo</button></a>
+				<a href="https://fuelup-648e.onrender.com/" target="_blank"><button class="click">View Live Demo</button></a>
 				<a href="https://github.com/elaintran/fuelup" target="_blank"><button class="click">View on Github</button></a>
 			</div>
 		</section>
